# pixi_workspaces

./: .gitmodules
behaviortree_ws/: .gitignore  pixi.toml
cuda_rrt_ws/: pixi.toml
curobo_ws/: .gitignore  README.md  curobo_clangd.diff  meshcat_visualizer.py  nvblox_torch.diff  pixi.toml  trajopt_example.py
drake_ws/: .gitignore  CMakeLists.txt  README.md  pixi.toml
drake_ws/src/: main.cc
genesis_ws/: pixi.toml
isaacsim_ws/: pixi.toml
llama_ws/: .gitignore  openai_example.py  pixi.toml
mujoco_ws/: .gitignore  README.md  pixi.toml
ompl_ws/: .gitignore  .gitmodules  pixi.toml
open_imu_camera_calibrator_ws/: README.md  pixi.toml
vamp_ws/: .gitignore  pixi.toml
whisper_ws/: pixi.toml
